----------------------------------------------------------------
mirt 0.2.6
---------------------------------------------------------------

* polymirt() uses confmirt() estimation engine

* 4PL support for mirt() and bfactor(), treating the upper bound as fixed

* coef() now has a rotate option for returning rotated IRT parameters

----------------------------------------------------------------
mirt 0.2.5
---------------------------------------------------------------

* Fixed translation bug in the C++ code from bfactor() causing illegal 
  vector length throw

* Fixed fscores() bug when using polychotomous items for mirt() and 
  bfactor()

* pass rotate='rotation' from mirt and polymirt to override default 
  default 'varimax' rotation at estimation time (suggested by 
  Niels Waller)

* RMSEA, G^2, and p set to NaN instead of internal placeholder when 
  there are missing data

* df adjusted when missing data present  

* oblique rotations return invisible factor correlation matrix

----------------------------------------------------------------
mirt 0.2.4
---------------------------------------------------------------

* degrees of freedom correctly adjusted when using noncompensatory
  items

* confmirtClass reorganized to work with S4 methods, now work
  more consistently with methods. 

* fixed G^2 and log-likelihood in logLik() when product terms included

* bugfix in drawThetas when noncompensatory items used

---------------------------------------------------------------
mirt 0.2.3
---------------------------------------------------------------

* bugfixes for fscores, itemplot, and generic functions

* read.mirt() added for creating a suitable plink object

* mirt() and bfactor() can now accommodate polychotomous items using 
  an ordinal IRT scheme

* itemplot() now makes use of the handy plink package plots, giving a 
  good deal of flexibility. 

* Generic plot()'s now use lattice plots extensively
