@@ -10,9 +10,10 @@
 Theory)}
 \usage{
   mirt(data, nfact, guess = 0, upper = 1, SE = FALSE,
-    rotate = 'varimax', prev.cor = NULL, par.prior = FALSE,
-    startvalues = NULL, quadpts = NULL, verbose = FALSE,
-    debug = FALSE, technical = list(), ...)
+    rotate = 'varimax', Target = NULL, prev.cor = NULL,
+    par.prior = FALSE, startvalues = NULL, quadpts = NULL,
+    verbose = FALSE, debug = FALSE, technical = list(),
+    ...)
 
   \S4method{summary}{mirt}(object, rotate = '', suppress =
     0, digits = 3, print = FALSE, ...)
@@ -206,15 +207,10 @@ Theory)}
   Factor scores are estimated assuming a normal prior
   distribution and can be appended to the input data matrix
   (\code{full.data = TRUE}) or displayed in a summary table
-  for all the unique response patterns. \code{summary}
-  allows for various rotations available from the
-  \code{GPArotation} package. These are:
-
-  \describe{ \item{orthogonal: }{\code{"varimax",
-  "quartimax", "tandemI", "tandemII", "entropy",
-  "mccammon", "bifactorT"}} \item{oblique:
-  }{\code{"promax", "oblimin", "quartimin", "oblimax",
-  "simplimax", "bifactorQ"}} }
+  for all the unique response patterns. \code{summary} and
+  \code{coef} allow for all the rotations available from
+  the \code{GPArotation} package as well as a
+  \code{'promax'} rotation.
 
   Using \code{plot} will plot the either the test surface
   function or the test information function for 1 and 2
