@@ -47,6 +47,7 @@ Objects can be created by calls of the form \code{new("polymirtClass", ...)}.
     \item{\code{tabdata}:}{Object of class \code{"matrix"}, tabulated data with expected values }
     \item{\code{estGuess}:}{Object of class \code{"logical"}, vector indicating which guessing parameters were estimated }
     \item{\code{null.mod}:}{Object of class \code{"S4"}, null model}
+    \item{\code{Target}:}{Object of class \code{"numeric"}, dummy rotation matrix}
     \item{\code{Call}:}{Object of class \code{"call"}, call }
   }
 }
